# calendar-sync

./: .env  .gitignore  AGENTS.md  Makefile  Procfile  README.md  calendar-sync-automation.applescript  calendar.ics  cli-test.py  cli.py  example-calendar.docx  folder_action.applescript  main.py  pyproject.toml  test.ics  test_geo_output.ics  test_geo_write.py
app/: __init__.py  calendar_generator.py  calendar_merger.py  calendar_parser.py  calendar_query.py  calendar_storage.py  config.py  constants.py  event_processor.py  exceptions.py  flask_adapters.py  publish.py  utils.py
app/ingestion/: __init__.py  base.py  ics_reader.py  json_reader.py  service.py  summary.py  word_reader.py
app/models/: __init__.py  calendar.py  event.py  ingestion.py  metadata.py  settings.py  template.py  template_loader.py
app/output/: __init__.py  base.py  ics_writer.py  json_writer.py
app/processing/: __init__.py  calendar_manager.py  calendar_merger.py  calendar_processor.py  configurable_processor.py  event_processor.py  event_type_processors.py  merge_strategies.py  template_utils.py
app/storage/: __init__.py  (+7 more)
cli/: __init__.py  context.py  parser.py  setup.py  utils.py
tests/: conftest.py  test.ics  test_app.py  test_calendar_generator.py  test_calendar_storage.py  test_config.py  test_docx_parser.py  test_event_processor.py  test_exceptions.py  test_file_types.py  test_git_setup.py  test_ingestion.py  test_models.py  test_output.py  test_overnight.py  test_pattern_aware.py  test_processing.py  test_publish.py  test_storage.py  test_template.py  test_template_regression.py
(+56 files in other folders)
