[project]
name = "calendar-sync"
version = "0.1.0"
description = "A Flask app to sync calendar data from Word documents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.2",
    "pytest==8.0.2",
    "icalendar==5.0.12",
    "python-docx==0.8.11",
    "requests==2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
